--- a/Proyectoalquiler/src/main/resources/application.properties
+++ b/Proyectoalquiler/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/reto3-1?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/retotres?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Eyder0793@
 spring.jpa.hibernate.ddl-auto=create
